Cập nhật source bio

--- a/_layouts/page-bio.html
+++ b/_layouts/page-bio.html
@@ -4,8 +4,13 @@ layout: base
 <link rel="stylesheet" href="/css/main-bio.css">
 <!-- <link rel="stylesheet" href="/books/css/books_component.css"> -->
 <!-- <link rel="stylesheet" href="/books/css/book_style.css"> -->
-
-books/css/book_style.css
+<!-- particles.js exclusion -->
+<!-- Thêm vào chạy lag [enable display: block;] -->
+<style>
+  #particles-js{
+      display: none;
+  }
+</style>
 {% include header.html type="page" %}
 
 <div role="main">
