Update css html bio

--- a/_layouts/page-bio.html
+++ b/_layouts/page-bio.html
@@ -15,8 +15,10 @@ layout: base
 
 <div role="main">
   <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+    <div class="col-md-10 col-md-offset-1">
       {{ content }}
+      <div class="zalo-chat-widget" data-oaid="4264208368346011802" data-welcome-message="Rất vui khi được hỗ trợ bạn!" data-autopopup="0" data-width="" data-height=""></div>
+      <script src="https://sp.zalo.me/plugins/sdk.js"></script>
 	    {% if page.comments %}
         <div class="disqus-comments">
 	        {% include disqus.html %}
