--- a/css/main-bio.css
+++ b/css/main-bio.css
@@ -12,7 +12,13 @@ main{
   padding: 20px;
   border-radius: 10px;
   background: #e9dfa783;
+  background-image: url(/img/Affiliate/hot_deals.gif);
+  background-size: 50px;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  overflow: hidden;
 }
+
 
 .product img {
   width: 100%;
@@ -68,21 +74,3 @@ main{
 .action--button i + span {
   margin-left: 1em;
 }
-
-
-blockquote {
-  margin: 20px 0px !important; 
-}
-blockquote::after {
-  position: absolute;
-  top: -15px;
-  left: 0;
-  z-index: -1;
-  line-height: 50px;
-  font-family: 'FontAwesome';
-  content: "@mittochipzz";
-  font-size: 20px;
-  color: rgba(0, 0, 0, 0.274);
-}
-
-
