--- a/css/main-bio.css
+++ b/css/main-bio.css
@@ -16,6 +16,7 @@ main{
   background-size: 50px;
   background-repeat: no-repeat;
   background-position: center bottom;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   overflow: hidden;
 }
 
