--- a/_layouts/page-bio.html
+++ b/_layouts/page-bio.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<link rel="stylesheet" href="/css/main-bio.css">
+<link rel="stylesheet" href="/dist/css/main-bio.css">
 
 {% include header.html type="page" %}
 
